# trading-agents-dashboard

./: .env.example  .gitignore  docker-compose.yml  mise.toml  run_scheduler.py  scheduler_service.py  skills-lock.json  tickers.json
.agents/rules/: commands.md
.opencode/: opencode.jsonc
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  data_agents.py  portfolio_agent.py  research_agents.py  risk_agents.py
backend/app/api/: analysis.py  auth.py  dependencies.py  health.py  portfolio.py  providers.py  settings.py  tickers.py
backend/app/auth/: routes.py
backend/app/core/: config.py  database.py  llm.py  security.py  sse.py
backend/app/models/: __init__.py  schemas.py
backend/app/routes/: analyze.py  chat.py  config.py  env.py  estimate.py  file_reports.py  health.py  history.py  memory.py  presets.py  providers.py  reports.py  runs.py  scheduler.py  stream.py  test_key.py  ticker.py  ui_state.py
backend/app/schemas/: analysis.py  portfolio.py  settings.py
backend/app/services/: alpaca_client.py  chat_service.py  cost_estimator.py  debate_extractor.py  env_store.py  fact_checker.py  memory_service.py  perplefina.py  presets_store.py  progress_tracker.py  run_manager.py  scheduler.py  summary_generator.py  tickers_store.py  ui_state_store.py
backend/app/websockets/: manager.py  routes.py
backend/app/workflow/: engine.py
docs/: API.md  ARCHITECTURE.md  DATA-MODELS.md  FRONTEND.md  INTEGRATION.md  PLAN.md  STATUS.md  WORKFLOW.md  milestone-01-foundation.md  milestone-02-analyze.md  milestone-03-scheduler.md  milestone-04-config-keys.md  milestone-05-reports.md  milestone-06-memory.md  milestone-07-chat.md  milestone-08-history-setup.md  milestone-09-polish.md
frontend/: .gitignore  PLAN.md  components.json  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/e2e/: visual-regression.test.ts
frontend/src/: App.tsx  Providers.tsx  index.css  (+2 more)
(+148 files in other folders)
