[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents-web"
version = "0.1.0"
description = "TradingAgents Web Dashboard Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytz>=2024.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W", "UP", "B", "C4", "ANN", "T20", "PTH", "TRY", "PD", "RUF", "ARG", "PER", "SIM", "TID", "Q", "NPY", "RET", "TCH", "EXE", "ASYNC", "PL"]
ignore = ["E501", "ANN101", "ANN102", "ANN103", "ARG001", "ARG002", "T201", "T203"]
fixable = ["F", "I", "W", "E", "UP", "B", "C4", "RUF", "ARG", "PTH", "PD", "TID", "SIM", "NPY", "RET", "EXE", "ASYNC"]